# ai-ml-gdgoc

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  calculator.py  docker-compose.yml  docker.env  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: a51fb30e2ef1_create_items_table.py
data/: day12_documents.json
data/processed/: day13_chunks.json
data/raw/: day13_documents.json
ignored/: temp_requirements.txt
scripts/: day11_qdrant_basics.py  day12_embeddings_baseline.py  day13_export_chunks.py  day13_ingest_chunks.py  day13_search_chunks.py
src/fastapi_day4/: api.py  db.py  ingestion.py  llm_client.py  models.py  rag.py  retrieval.py  schema.py  settings.py  vector_store.py
src/git_day_practice/: __init__.py  settings.py
tests/: conftest.py  test_config.py  test_day15_rag.py  test_secure.py  test_validation.py
