[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-day3-practice"
version = "0.1.0"
description = "Week 1 Day 3: Python tooling setup (venv, Ruff, precommit)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

# Development dependencies as an optional extra.
[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.6",
]

# If you use a src/ layout, explicitly tell hatch which package to ship.
[tool.hatch.build.targets.wheel]
packages = ["src/git_day_practice"]

# -------------------------
# Ruff configuration
# -------------------------
[tool.ruff]
line-length = 88
indent-width = 4

# Lint rule configuration
[tool.ruff.lint]
# Start with a practical set:
# E/F: pycodestyle + pyflakes (core correctness)
# I: import sorting (isort-like)
# B: bugbear (common bug patterns)
select = ["E4", "E7", "E9", "F", "I", "B"]
# Ruff formatter handles line length; most teams ignore E501 to avoid duplicate noise.
ignore = ["E501"]

# Formatter configuration
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
